fix spacing for several components EATON-598

--- a/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
+++ b/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
@@ -12,6 +12,8 @@
 
 .module-media-gallery {
 
+  margin: 60px 0;
+
   //-----------------------------------
   // Gallery Headline & Description
   //-----------------------------------
@@ -190,8 +192,6 @@
   // Desktop Breakpoint: >992 px
   //-----------------------------------
   @include media-desktop-and-up {
-    padding: $spacing__md 0 $spacing__xl;
-
 
     // Slide Container
     //--------------
