--- a/eaton.frontend/src/components/country-selector/css/views/_view-accordion.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-accordion.scss
@@ -68,6 +68,7 @@
     margin-right: ($spacing__sm / 3); //TODO: Enable
     width: 24px;
     height: 24px;
+    border-radius: 50%;
   }
 
   &__item-country-name {
