--- a/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
@@ -77,6 +77,7 @@ $border-color: rgba($color__secondary-gray4, 0.5);
     margin-right: ($spacing__sm / 3); //TODO: Enable
     width: 24px;
     height: 24px;
+    border-radius: 50%;
   }
 
   &__item-country-name {
