EATON-602: added native dropdown for mobile

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
@@ -28,6 +28,9 @@
             </li>
           </ul>
         </div>
+        <select class="native-select" data-sly-list="${ data.sortBy.items }" >
+          <option value="${item.url}">${item.label}</option>
+        </select>
       </div>
     </div>
 
