--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
@@ -18,15 +18,41 @@
 
   &__sort-options {
     float: right;
+    margin-right: -52px;
     width: 160px;
-    margin-right: -50px;
     margin-top: -15px;
+    position: relative;
+
+    @include media-mobile-and-tablet {
+      margin-right: -20px;
+      width: 130px;
+      height: 70px;
+    }
+
+    select.native-select {
+      position: absolute;
+      background: transparent;
+      top: 5px;
+      right: -10px;
+      width: 170px;
+      height: 45px;
+      border: 0;
+      color: transparent;
+
+      @include media-desktop-and-up {
+        display: none;
+      }
+    }
 
     .dropdown {
       font-family: $font-family__secondary;
       font-size: 1.8rem;
       width: 100%;
-      position: relative;
+
+      @include media-mobile-and-tablet {
+        position: absolute;
+        top: 0;
+      }
 
       [data-toggle="dropdown"] {
         background: $color__white;
@@ -36,6 +62,10 @@
         padding-left: 2rem;
         padding-top: 2.5rem;
         border: 1px solid $color__white;
+
+        @include media-mobile-and-tablet {
+          padding-top: 15px;
+        }
 
         &[aria-expanded="true"] {
           border-color: $color__secondary-gray5;
