--- a/eaton.frontend/src/components/country-selector/css/views/_view-accordion.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-accordion.scss
@@ -181,15 +181,18 @@
 
     &__item-language {
       display: inline-block;
-      padding: 0 8px;
       border-right: 1px solid #333;
-
-      &:first-child {
-        padding-left: 0;
-      }
 
       &:last-child {
         border: 0;
+      }
+
+      a {
+        padding: 0 8px;
+        
+        &:first-child {
+          padding-left: 0;
+        }
       }
     }
   }
