--- a/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
@@ -264,15 +264,18 @@ $border-color: rgba($color__secondary-gray4, 0.5);
 
     &__item-language {
       display: inline-block;
-      padding: 0 8px;
       border-right: 1px solid $color__white;
-
-      &:first-child {
-        padding-left: 0;
-      }
 
       &:last-child {
         border: 0;
+      }
+
+      a {
+        padding: 0 8px;
+
+        &:first-child {
+          padding-left: 0;
+        }
       }
     }
   }
