--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
@@ -58,9 +58,10 @@
   .country-selector-accordion__item-body { padding-bottom: 30px; }
   .country-selector-accordion__item-country { -webkit-flex-basis: 25%; -ms-flex-preferred-size: 25%; flex-basis: 25%; padding: 0 0 30px; }
   .country-selector-accordion__item-country-name { padding-bottom: 8px; }
-  .country-selector-accordion__item-language { display: inline-block; padding: 0 8px; border-right: 1px solid #333; }
-  .country-selector-accordion__item-language:first-child { padding-left: 0; }
-  .country-selector-accordion__item-language:last-child { border: 0; } }
+  .country-selector-accordion__item-language { display: inline-block; border-right: 1px solid #333; }
+  .country-selector-accordion__item-language:last-child { border: 0; }
+  .country-selector-accordion__item-language a { padding: 0 8px; }
+  .country-selector-accordion__item-language a:first-child { padding-left: 0; } }
 
 .country-selector-drawer__header { background: #333F48; }
 
@@ -119,6 +120,7 @@
   .country-selector-drawer__item-header { display: none; }
   .country-selector-drawer__item-country { -webkit-flex-basis: 33.33%; -ms-flex-preferred-size: 33.33%; flex-basis: 33.33%; padding: 0 25px 40px 25px; }
   .country-selector-drawer__item-country-name { padding-bottom: 30px; }
-  .country-selector-drawer__item-language { display: inline-block; padding: 0 8px; border-right: 1px solid #FFF; }
-  .country-selector-drawer__item-language:first-child { padding-left: 0; }
-  .country-selector-drawer__item-language:last-child { border: 0; } }
+  .country-selector-drawer__item-language { display: inline-block; border-right: 1px solid #FFF; }
+  .country-selector-drawer__item-language:last-child { border: 0; }
+  .country-selector-drawer__item-language a { padding: 0 8px; }
+  .country-selector-drawer__item-language a:first-child { padding-left: 0; } }
