--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-links.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-links.html
@@ -7,11 +7,7 @@
             aria-label="Go to ${ item.cta.title }"
             class="eaton-list-links__link b-body-copy-small"
             target="${ item.cta.target }">
-            <span class="eaton-list-links__text">
-                ${ item.cta.title }
-            </span>
-            <i class="eaton-list-links__icon glyphicon glyphicon-menu-right"
-              aria-hidden="true"></i>
+            <span class="eaton-list-links__text">${ item.cta.title }</span>
           </a>
         </li>
       </ul>
