update spacing for featured story component

--- a/eaton.frontend/src/components/ttil-list/css/views/_view-featured-story.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-featured-story.scss
@@ -1,5 +1,7 @@
 .featured-story-component {
 
+  margin: 60px 0;
+
   // Override Component - Rendition Images
   //--------------
   .rendition__image {
