--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -87,6 +87,8 @@
 
 }
 */
+.featured-story-component { margin: 60px 0; }
+
 .featured-story-component .rendition__image { width: 100%; }
 
 .featured-story-component__content { padding: 60px 50px; }
