[Image List] Consolidate Markup to handle all 4 scenarios in one. (Headline + URL)

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -178,7 +178,7 @@
 
 .eaton-ttil-image-list__item { padding: 0 10px; }
 
-.eaton-ttil-image-list__content { display: block; text-align: center; }
+.eaton-ttil-image-list__content { display: block; text-align: center; position: relative; }
 
 .eaton-ttil-image-list__image img { display: inline-block; width: 100%; }
 
