--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-image-only.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-image-only.html
@@ -2,46 +2,19 @@
     <div class="eaton-ttil-image-list">
       <!--/* Check if Grid is enabled */-->
       <div data-sly-list="${ data.items }" class="${properties.toggleInnerGrid ? 'container' : ''} eaton-ttil-image-list__container">
+
         <div class="eaton-ttil-image-list__item">
-
-            <!--/* When Image has Headline & No Url */-->
-            <div data-sly-test="${!item.link && item.headline}" class="eaton-ttil-image-list__content">
-              <div class="eaton-ttil-image-list__image">
-                <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
-                  <sly data-sly-call="${ tpl.module @ data=item.image }"></sly>
-                </sly>
-              </div>
-              <div class="eaton-ttil-image-list__image-headline">${item.headline}</div>
+          <div class="eaton-ttil-image-list__content">
+            <div class="eaton-ttil-image-list__image">
+              <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
+                <sly data-sly-call="${ tpl.module @ data=item.image }"></sly>
+              </sly>
             </div>
-
-            <!--/* When Image has Headline & Url */-->
-            <a data-sly-test="${item.link && item.headline}" href="${item.link.url}" target="${item.link.target}" class="eaton-ttil-image-list__content">
-              <div class="eaton-ttil-image-list__image">
-                <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
-                  <sly data-sly-call="${ tpl.module @ data=item.image }"></sly>
-                </sly>
-              </div>
-              <div class="eaton-ttil-image-list__image-headline">${item.headline}</div>
-            </a>
-
-            <!--/* When Image has no Headline and has a URL */-->
-            <a data-sly-test="${!item.headline && item.link}" href="${item.link.url}" target="${item.link.target}" class="eaton-ttil-image-list__content">
-              <div class="eaton-ttil-image-list__image">
-                <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
-                  <sly data-sly-call="${ tpl.module @ data=item.image }"></sly>
-                </sly>
-              </div>
-            </a>
-
-            <!--/* When Image has no Headline and no URL */-->
-            <div data-sly-test="${!item.headline && !item.link}" class="eaton-ttil-image-list__content">
-              <div class="eaton-ttil-image-list__image">
-                <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
-                  <sly data-sly-call="${ tpl.module @ data=item.image }"></sly>
-                </sly>
-              </div>
-            </a>
+            <div data-sly-test="${item.headline}" class="eaton-ttil-image-list__image-headline">${item.headline}</div>
+            <a data-sly-test="${item.link}" class="eaton-ttil-image-list__image-link u-absolute-fill" href="${item.link.url}" target="${item.link.target}"></a>
+          </div>
         </div>
+
       </div>
     </div>
 </sly>
