[EATON-507] FIX - Media Gallery - Icons are hard to see on some gallery images - Fix Lint issues

--- a/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
+++ b/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
@@ -260,7 +260,7 @@
 
     &__slide-utility .icon {
       color: $color__white;
-      text-shadow: 0 0 2px rgba(#000, 0.7)
+      text-shadow: 0 0 2px rgba(#000, 0.7);
     }
 
   }
