--- a/eaton.frontend/src/components/ttil-list/css/views/_view-image-only.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-image-only.scss
@@ -15,9 +15,8 @@
     position: relative;
   }
 
-  &__image img {
-    display: inline-block;
-    width: 100%;
+  &__image {
+    position: relative;
   }
 
   &__image-headline {
@@ -54,6 +53,10 @@
       margin: 0 auto;
     }
 
+    &__image img {
+      display: inline-block;
+    }
+
     &__image-headline {
       text-align: center;
     }
@@ -78,6 +81,28 @@
         flex-basis: 50%;
         padding: 0;
       }
+    }
+
+    &__image {
+      display: block;
+      width: 100%;
+      padding: 0;
+      text-align: center;
+
+      &::before {
+        display: block;
+        content: '';
+        padding-top: 100%;
+        border: 1px solid $color__primary-blue;
+      }
+    }
+
+    &__image img {
+      position: absolute;
+      top: 50%;
+      bottom: 0;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
 
     &__image-headline {
