--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -180,7 +180,7 @@
 
 .eaton-ttil-image-list__content { display: block; text-align: center; position: relative; }
 
-.eaton-ttil-image-list__image img { display: inline-block; width: 100%; }
+.eaton-ttil-image-list__image { position: relative; }
 
 .eaton-ttil-image-list__image-headline { margin-top: 30px; color: #005EB8; font-weight: bold; }
 
@@ -189,11 +189,15 @@
   .eaton-ttil-image-list__item:last-child { margin-bottom: 0; }
   .eaton-ttil-image-list__content { text-align: center; }
   .eaton-ttil-image-list__image { max-width: 480px; min-width: 250px; margin: 0 auto; }
+  .eaton-ttil-image-list__image img { display: inline-block; }
   .eaton-ttil-image-list__image-headline { text-align: center; } }
 
 @media screen and (min-width: 992px) { .eaton-ttil-image-list__container { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; }
   .eaton-ttil-image-list__item { -webkit-flex-basis: 31%; -ms-flex-preferred-size: 31%; flex-basis: 31%; margin-bottom: 60px; }
   .eaton-grid-control .eaton-ttil-image-list__item { -webkit-flex-basis: 50%; -ms-flex-preferred-size: 50%; flex-basis: 50%; padding: 0; }
+  .eaton-ttil-image-list__image { display: block; width: 100%; padding: 0; text-align: center; }
+  .eaton-ttil-image-list__image::before { display: block; content: ''; padding-top: 100%; border: 1px solid #005EB8; }
+  .eaton-ttil-image-list__image img { position: absolute; top: 50%; bottom: 0; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
   .eaton-ttil-image-list__image-headline { text-align: left; } }
 
 .eaton-category-hero { position: relative; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
