bug fix on link list

--- a/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
@@ -87,7 +87,8 @@
 
 
   // Override font-sizes for dark-theme & on header/footer
-  .eaton-footer.dark-theme & {
+  .eaton-footer &,
+  .eaton-header & {
     padding-bottom: 0;
 
     .icon-chevron-right {
