--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
@@ -231,3 +231,19 @@
     }
   }
 }
+
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .faceted-navigation {
+    &__list-item {
+      input[type="radio"],
+      input[type="checkbox"] {
+        &.input--small {
+          &:checked + span::after {
+            top: .7rem;
+          }
+        }
+      }
+    }
+  }
+}
