--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
@@ -32,7 +32,7 @@
     select.native-select {
       position: absolute;
       background: transparent;
-      top: 5px;
+      top: 0;
       right: -10px;
       width: 170px;
       height: 45px;
