--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -27,7 +27,7 @@
 
 @media screen and (max-width: 991px) { .header-utility-nav { position: fixed; bottom: 0; z-index: 113; /* Higher Stacking order than Primary Nav but Less than Search */ width: 100%; right: 0; opacity: 0; visibility: hidden; -webkit-transition: opacity 0.5s ease-in-out; transition: opacity 0.5s ease-in-out; padding: 0; }
   .header-utility-nav .container { padding: 0; }
-  .header-utility-nav__row { -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
+  .header-utility-nav__row { -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; margin: 0; }
   .header-utility-nav__toggle-selector { padding: 25px 0 25px 30px; -webkit-box-flex: 1; -webkit-flex-grow: 1; -ms-flex-positive: 1; flex-grow: 1; background: #333F48; }
   .header-utility-nav__sign-in { text-align: center; padding: 0 30px; -webkit-flex-basis: 100px; -ms-flex-preferred-size: 100px; flex-basis: 100px; }
   .header-utility-nav__signin { display: none; }
