--- a/eaton.frontend/src/shared/module-intra-tab-link/css/module-intra-tab-link.scss
+++ b/eaton.frontend/src/shared/module-intra-tab-link/css/module-intra-tab-link.scss
@@ -6,10 +6,11 @@
 
 .module-intra-tab-link {
   text-align: center;
-  padding: $spacing__lg 0;
+  padding: $spacing__md 0;
 
   a {
     font-size: 3.6rem;
+    line-height: 3.6rem;
     font-family: $font-family__primary-bold;
   }
 
@@ -18,6 +19,7 @@
 
     a {
       font-size: 2rem;
+      line-height: 2rem;
     }
 
     i {
