--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-intra-tab-link/css/module-intra-tab-link.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-intra-tab-link/css/module-intra-tab-link.css
@@ -11,10 +11,10 @@
  */
 
 
-.module-intra-tab-link { text-align: center; padding: 90px 0; }
+.module-intra-tab-link { text-align: center; padding: 60px 0; }
 
-.module-intra-tab-link a { font-size: 3.6rem; font-family: "EatonBold", Arial, sans-serif; }
+.module-intra-tab-link a { font-size: 3.6rem; line-height: 3.6rem; font-family: "EatonBold", Arial, sans-serif; }
 
 @media screen and (max-width: 991px) { .module-intra-tab-link { padding: 60px 0; }
-  .module-intra-tab-link a { font-size: 2rem; }
+  .module-intra-tab-link a { font-size: 2rem; line-height: 2rem; }
   .module-intra-tab-link i { font-size: 1.2rem; } }
