[EATON-608] Only shows two columns and countries at the end do not display in IE11

--- a/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
@@ -254,7 +254,9 @@ $border-color: rgba($color__secondary-gray4, 0.5);
     }
 
     &__item-country {
-      flex-basis: 33.33%;
+      // NOTE: "flex-basis" was replaced with "width" due to layout issues in IE11
+      // flex-basis: 33.33%;
+      width: 33.33%;
       padding: 0 25px 40px 25px;
     }
 
