--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
@@ -118,7 +118,7 @@
   .country-selector-drawer__item-list { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; }
   .country-selector-drawer__item { border: 0; }
   .country-selector-drawer__item-header { display: none; }
-  .country-selector-drawer__item-country { -webkit-flex-basis: 33.33%; -ms-flex-preferred-size: 33.33%; flex-basis: 33.33%; padding: 0 25px 40px 25px; }
+  .country-selector-drawer__item-country { width: 33.33%; padding: 0 25px 40px 25px; }
   .country-selector-drawer__item-country-name { padding-bottom: 30px; }
   .country-selector-drawer__item-language { display: inline-block; border-right: 1px solid #FFF; }
   .country-selector-drawer__item-language:last-child { border: 0; }
