--- a/eaton.frontend/src/components/icon-list/css/views/_view-no-image-highlights.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-no-image-highlights.scss
@@ -42,6 +42,9 @@
         margin-bottom: 0;
       }
     }
+    &__title {
+      margin-bottom: 3px; 
+    }
 
     &__text {
       font-size: 5rem;
