fixes for EATON-598

--- a/eaton.frontend/src/components/icon-list/css/views/_view-top-list-with-icon.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-top-list-with-icon.scss
@@ -6,7 +6,7 @@
 
 
 .eaton-top-list-with-icon {
-  margin-top: $spacing__lg / 2;
+  margin-top: $spacing__md;
   overflow: hidden;
 
   &__icon {
@@ -34,7 +34,6 @@
 
 
   @include media-desktop-and-up {
-    margin-top: $spacing__lg;
 
     &__icon {
       max-width: 70px;
