--- a/eaton.frontend/src/components/product-specifications/css/product-specifications.scss
+++ b/eaton.frontend/src/components/product-specifications/css/product-specifications.scss
@@ -8,7 +8,8 @@
 
 // Import SubModules
 .product-specifications {
-  padding: 20px 0;
+
+  margin: 60px 0;
 
   .value-type-document {
     // empty selector for future reference
@@ -45,14 +46,5 @@
       display: none;
     }
 
-  }
-
-
-
-  //-----------------------------------
-  // Media Query Desktop & Desktop Large
-  //-----------------------------------
-  @include media-desktop-and-up {
-    padding: 40px 0;
   }
 }
