--- a/eaton.frontend/src/components/ttil/css/views/_view-article-feature.scss
+++ b/eaton.frontend/src/components/ttil/css/views/_view-article-feature.scss
@@ -1,11 +1,12 @@
 .eaton-article-feature {
 
+  margin: 60px 0;
+
   font-family: $font-family__primary;
 
   &__image {
     width: 100%;
     height: auto;
-    margin-top: 120px;
   }
 
   &__title {
@@ -36,18 +37,10 @@
     font-style: italic;
     margin-bottom: 45px;
   }
-
-  &__body {
-    margin-bottom: 60px;
-    // font-size: 1.5em;
-  }
 }
 
 @include media-mobile-and-tablet {
   .eaton-article-feature {
-    &__image {
-      margin-top: 60px;
-    }
 
     &__title {
       // font-size: 1.1em;
@@ -56,12 +49,6 @@
 
     &__date {
       margin-bottom: 20px;
-    }
-
-    &__body {
-      margin-bottom: 8px;
-      // line-height: 1.5em;
-      // font-size: 1.2em;
     }
 
     &__cta {
