--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-specifications/css/product-specifications.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-specifications/css/product-specifications.css
@@ -11,7 +11,7 @@
  */
 
 
-.product-specifications { padding: 20px 0; }
+.product-specifications { margin: 60px 0; }
 
 .product-specifications .value-type-link { margin-right: 1rem; }
 
@@ -20,5 +20,3 @@
 .product-specifications .value-type-image img { width: 100%; height: auto; max-width: 43px; max-height: 43px; vertical-align: middle; }
 
 @media screen and (max-width: 991px) { .product-specifications .module-anchor-links { display: none; } }
-
-@media screen and (min-width: 992px) { .product-specifications { padding: 40px 0; } }
