--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil/css/ttil.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil/css/ttil.css
@@ -77,9 +77,9 @@
 
 @media screen and (max-width: 767px) { .feature-block-component__cta-wrapper { text-align: center; } }
 
-.eaton-article-feature { font-family: "Eaton", Arial, sans-serif; }
+.eaton-article-feature { margin: 60px 0; font-family: "Eaton", Arial, sans-serif; }
 
-.eaton-article-feature__image { width: 100%; height: auto; margin-top: 120px; }
+.eaton-article-feature__image { width: 100%; height: auto; }
 
 .eaton-article-feature__title { margin-top: 55px; }
 
@@ -89,12 +89,8 @@
 
 .eaton-article-feature__date { font-style: italic; margin-bottom: 45px; }
 
-.eaton-article-feature__body { margin-bottom: 60px; }
-
-@media screen and (max-width: 991px) { .eaton-article-feature__image { margin-top: 60px; }
-  .eaton-article-feature__title { margin-top: 27px; }
+@media screen and (max-width: 991px) { .eaton-article-feature__title { margin-top: 27px; }
   .eaton-article-feature__date { margin-bottom: 20px; }
-  .eaton-article-feature__body { margin-bottom: 8px; }
   .eaton-article-feature__cta { font-size: 2.8rem; line-height: 3.2rem; margin-top: 5px; margin-bottom: 5px; } }
 
 .eaton-page-overview { margin-top: 120px; margin-bottom: 60px; }
