--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-glyphicon-font.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-glyphicon-font.html
@@ -45,7 +45,7 @@
 
 
 
-    <div class="b-heading-h5">Icon Library:</div>
+    <div class="b-heading-h5">Iconfont - Icons available:</div>
     <ul class="sg-glyphicons__list">
       <sly data-sly-list="${ data.icons }">
         <div class="sg-glyphicons__list-item text-center">
