fix spacing for title component

--- a/eaton.frontend/src/components/title/css/views/_view-default.scss
+++ b/eaton.frontend/src/components/title/css/views/_view-default.scss
@@ -22,7 +22,7 @@
 
   // When the inner-grid is active for the component, add padding for the headline
   &--inset &__headline {
-    padding-top: $spacing__sm;
+    padding-top: $spacing__md;
   }
 
   //-----------------------------------
