--- a/eaton.frontend/src/components/how-to-buy/css/how-to-buy.scss
+++ b/eaton.frontend/src/components/how-to-buy/css/how-to-buy.scss
@@ -6,6 +6,7 @@
 @import "../../../global/css/_config/sass";
 
 .eaton-how-to-buy {
+  margin: $spacing__md 0;
   padding-top: $spacing__md;
   overflow: hidden;
   background: $color__secondary-gray6;
