--- a/eaton.frontend/src/components/title/css/views/_view-witheyebrowbyline.scss
+++ b/eaton.frontend/src/components/title/css/views/_view-witheyebrowbyline.scss
@@ -17,7 +17,7 @@ h2.eaton-title__eyebrow-and-byline {
   &--eyebrow-and-byline {
 
     // EATON-372 & EATON-598 - General spacing between components
-    margin-top: $spacing__md;
+    margin-top: $spacing__sm;
   }
 
 
