--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/how-to-buy/css/how-to-buy.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/how-to-buy/css/how-to-buy.css
@@ -11,7 +11,7 @@
  */
 
 
-.eaton-how-to-buy { padding-top: 60px; overflow: hidden; background: #F8F8F8; }
+.eaton-how-to-buy { margin: 60px 0; padding-top: 60px; overflow: hidden; background: #F8F8F8; }
 
 .eaton-how-to-buy__icon { color: #ED8B00; max-width: 60px; display: inline-block; }
 
