--- a/eaton.frontend/src/shared/module-intra-tab-link/css/module-intra-tab-link.scss
+++ b/eaton.frontend/src/shared/module-intra-tab-link/css/module-intra-tab-link.scss
@@ -6,7 +6,7 @@
 
 .module-intra-tab-link {
   text-align: center;
-  padding: $spacing__md 0;
+  margin: $spacing__md 0;
 
   a {
     font-size: 3.6rem;
@@ -15,7 +15,7 @@
   }
 
   @include media-mobile-and-tablet {
-    padding: $spacing__md 0;
+    margin: $spacing__md 0;
 
     a {
       font-size: 2rem;
