--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/quote/css/quote.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/quote/css/quote.css
@@ -11,7 +11,7 @@
  */
 
 
-.quote { padding: 30px 0; padding-top: 40px; }
+.eaton-quote { margin: 60px 0; }
 
 .eaton-quote .container { padding: 100px 0 60px; border-top: 4px solid #EEF0F2; border-bottom: 4px solid #EEF0F2; position: relative; }
 
