--- a/eaton.frontend/src/components/list/css/views/_view-article-list-single-feature.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-article-list-single-feature.scss
@@ -24,6 +24,12 @@
 
     &--copy {
       padding: 15px 0;
+
+      &:last-child {
+        .category-item-date--padding {
+          padding-bottom: 0;
+        }
+      }
     }
   }
 
