--- a/eaton.frontend/src/components/ttil/css/views/_view-topic-link-white.scss
+++ b/eaton.frontend/src/components/ttil/css/views/_view-topic-link-white.scss
@@ -6,10 +6,26 @@
   &.no-cta {
 
     padding: 0;
+    margin-bottom: -35px;
 
     .container {
       width: 100%;
       padding: 0;
+    }
+
+    .eaton-topic-link-white {
+
+      &__icon {
+        margin-bottom: 20px;
+      }
+
+      &__header {
+        margin-bottom: 5px;
+      }
+
+      &__description {
+        margin-bottom: 0;
+      }
     }
   }
 
