Minor update: Fix gulp warnings - List component

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -147,7 +147,7 @@
 
 .eaton-list-links__col { padding: 0; margin: 0; list-style-type: none; }
 
-.eaton-list-links__link { padding: 10px 0; text-decoration: none; display: block; padding: 10px 0; }
+.eaton-list-links__link { padding: 10px 0; text-decoration: none; display: block; }
 
 .eaton-list-links__link span { color: #FFF; }
 
