--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
@@ -107,6 +107,7 @@
     margin: 1.5rem 0;
     text-align: left;
     width: 100%;
+    font-size: 1.8rem;
 
     .icon::before {
       position: absolute;
