--- a/eaton.frontend/src/components/product-grid/css/views/_product-card-sku.scss
+++ b/eaton.frontend/src/components/product-grid/css/views/_product-card-sku.scss
@@ -61,6 +61,10 @@
     padding: 0;
   }
 
+  &__attr-label {
+    margin-bottom: 5px;
+  }
+
 
   //-----------------------------------
   // Media-Query: Mobile & Tablet
