--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-grid/css/product-grid.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-grid/css/product-grid.css
@@ -25,6 +25,8 @@
 
 .product-card-sku__links-list { list-style-type: none; margin: 0; padding: 0; }
 
+.product-card-sku__attr-label { margin-bottom: 5px; }
+
 @media screen and (max-width: 991px) { .product-card-sku { margin-left: -30px; margin-right: -30px; }
   .product-card-sku__image-wrapper { left: 30px; top: 20px; }
   .product-card-sku__title-wrapper { background-color: #005EB8; position: relative; }
