EATON-616 FIX / Feature Request - Horizontal Divider needs to be darker - Divider color should be "Gray-4"
Previous value was "Gray-5"

--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
@@ -97,7 +97,9 @@
   }
 
   &__facet-group {
-    border-bottom: 1px solid $color__secondary-gray5;
+
+    // EATON-616: Horizontal Divider needs to be darker - Divider color should be "Gray-4"
+    border-bottom: 1px solid $color__secondary-gray4;
     margin-bottom: 1rem;
   }
 
