--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
@@ -92,7 +92,7 @@
 
 .faceted-navigation .mobile-header .icon { font-size: 1.6rem; position: relative; top: 1px; }
 
-.faceted-navigation__facet-group { border-bottom: 1px solid #EEF0F2; margin-bottom: 1rem; }
+.faceted-navigation__facet-group { border-bottom: 1px solid #CCD2D7; margin-bottom: 1rem; }
 
 .faceted-navigation__header.button--reset, .faceted-navigation__view-more-groups { cursor: pointer; margin: 1.5rem 0; text-align: left; width: 100%; font-size: 1.8rem; }
 
