--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -195,7 +195,7 @@
 @media screen and (min-width: 992px) { .eaton-ttil-image-list__container { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; }
   .eaton-ttil-image-list__item { -webkit-flex-basis: 31%; -ms-flex-preferred-size: 31%; flex-basis: 31%; margin-bottom: 60px; }
   .eaton-grid-control .eaton-ttil-image-list__item { -webkit-flex-basis: 50%; -ms-flex-preferred-size: 50%; flex-basis: 50%; padding: 0; }
-  .eaton-ttil-image-list__image { display: block; width: 100%; padding: 0; text-align: center; border: 1px solid #005EB8; overflow: hidden; }
+  .eaton-ttil-image-list__image { display: block; width: 100%; padding: 0; text-align: center; overflow: hidden; }
   .eaton-ttil-image-list__image::before { display: block; content: ''; padding-top: 100%; }
   .eaton-ttil-image-list__image img { position: absolute; top: 50%; bottom: 0; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
   .eaton-ttil-image-list__image-headline { text-align: left; } }
