[EATON-603] Add headline color based on if item has a link.

--- a/eaton.frontend/src/components/ttil-list/css/views/_view-image-only.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-image-only.scss
@@ -21,9 +21,17 @@
 
   &__image-headline {
     margin-top: ($spacing__sm);
-    color: $color__primary-blue;
     font-weight: bold;
   }
+
+  .headline-link {
+    color: $color__primary-blue;
+  }
+
+  // If the item has a link - update the headline color
+  // &--has-link .eaton-ttil-image-list__image-headline {
+  //   color: $color__primary-blue;
+  // }
 
   //-----------------------------
   // Mobile-Tablet Breakpoint
