--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -182,7 +182,9 @@
 
 .eaton-ttil-image-list__image { position: relative; }
 
-.eaton-ttil-image-list__image-headline { margin-top: 30px; color: #005EB8; font-weight: bold; }
+.eaton-ttil-image-list__image-headline { margin-top: 30px; font-weight: bold; }
+
+.eaton-ttil-image-list .headline-link { color: #005EB8; }
 
 @media screen and (max-width: 991px) { .eaton-ttil-image-list__container { display: block; }
   .eaton-ttil-image-list__item { -webkit-flex-basis: 100%; -ms-flex-preferred-size: 100%; flex-basis: 100%; padding: 0 10px; margin-bottom: 30px; }
